# universalcircuit

./: CMakeLists.txt  README.md  UC  bristol
Output/: Test4Gate.circuit_circ.txt  Test4Gate.circuit_prog.txt  Test8Gate.circuit_circ.txt  Test8Gate.circuit_prog.txt  UC.cpp  adder_32bit.txt_SHDL.circuit_Mod_SHDL.circuit_circ.txt  adder_32bit.txt_SHDL.circuit_Mod_SHDL.circuit_prog.txt  adder_32bit.txt_SHDL.circuit_circ.txt  adder_32bit.txt_SHDL.circuit_prog.txt  adder_64bit.txt_SHDL.circuit_Mod_SHDL.circuit_circ.txt  adder_64bit.txt_SHDL.circuit_Mod_SHDL.circuit_prog.txt  adder_64bit.txt_SHDL.circuit_circ.txt  adder_64bit.txt_SHDL.circuit_prog.txt  comparator_32bit_signed_lteq.txt_SHDL.circuit_circ.txt  comparator_32bit_signed_lteq.txt_SHDL.circuit_prog.txt  comparator_32bit_unsigned_lteq.txt_SHDL.circuit_circ.txt  comparator_32bit_unsigned_lteq.txt_SHDL.circuit_prog.txt  mult_32x32.txt_SHDL.circuit_Mod_SHDL.circuit_prog.txt
Test/: Test15Gate.circuit  Test3Gate.circuit  Test4Gate.circuit  Test4Gate.circuit_Mod_SHDL.circuit  Test7Gate.circuit  Test7Gate.circuit_Mod_SHDL.circuit  Test8Gate.circuit_Mod_SHDL.circuit  Test8Gate的副本.circuit  adder_32bit.txt_SHDL.circuit  adder_32bit.txt_SHDL.circuit_Mod_SHDL.circuit  adder_64bit.txt_SHDL.circuit  adder_64bit.txt_SHDL.circuit_Mod_SHDL.circuit  comparator_32bit_signed_lteq.txt_SHDL.circuit  comparator_32bit_signed_lteq.txt_SHDL.circuit_Mod_SHDL.circuit  comparator_32bit_unsigned_lteq.txt_SHDL.circuit  comparator_32bit_unsigned_lteq.txt_SHDL.circuit_Mod_SHDL.circuit  mult_32x32.txt_SHDL.circuit  (+1 more)
src/: UC.cpp  UC.h  config.h  (+2 more)
(+22 files in other folders)
